--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --secondary-text-color: rgba(117, 117, 117, 1);
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
+  --fon: #f5f4fa;
 }
 
 body {
@@ -125,7 +126,16 @@ ul {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: #2f303a;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/fon.jpg");
   text-align: center;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero {
   color: var(--primary-white-color);
@@ -153,6 +163,7 @@ ul {
   text-align: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -167,9 +178,34 @@ ul {
   padding-bottom: 94px;
   padding-left: 0;
 }
-.feature li:not(:last-child) {
+.feature .item::before {
+  content: "";
+  display: block;
+  height: 120px;
+  background-color: var(--fon);
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
+}
+.feature .item:nth-child(1)::before {
+  background-image: url(../images/antenna\ 1.svg);
+}
+.feature .item:nth-child(2)::before {
+  background-image: url(../images/clock\ 1.svg);
+}
+.feature .item:nth-child(3)::before {
+  background-image: url(../images/diagram\ 1.svg);
+}
+.feature .item:nth-child(4)::before {
+  background-image: url(../images/astronaut\ 1.svg);
+}
+
+.feature .item:not(:last-child) {
   margin-right: 30px;
 }
+
 .feature-primary-text {
   font-weight: 700;
   font-size: 14px;
@@ -203,7 +239,7 @@ ul {
 /* -------TEAM----------*/
 
 .team {
-  background-color: #f5f4fa;
+  background-color: var(--fon);
 }
 .team-title {
   padding-top: 94px;
@@ -288,6 +324,7 @@ ul {
   padding: 10px 22px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  cursor: pointer;
 }
 .portfolio-button [type="button"]:hover,
 .portfolio-button [type="button"]:focus {
