--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,9 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+.navigation .current {
+  color: var(--accent-color);
+}
 /*-------HEADER---------*/
 
 .header {
@@ -113,14 +115,26 @@ ul {
 .address-header .item + .item {
   margin-left: 50px;
 }
-.address-link:hover,
-.address-link:focus {
-  color: var(--accent-color);
-}
-.current {
-  color: var(--accent-color);
-}
 
+.address-header .item {
+  display: flex;
+  align-items: center;
+}
+.address-header .envelope {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+}
+.address-header .smartphone {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+}
+.address-header .address-link:hover {
+  color: var(--accent-color);
+}
 /* -----HERO------------*/
 .hero-fon {
   padding-top: 200px;
@@ -211,6 +225,7 @@ ul {
   font-size: 14px;
   line-height: 16px;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .feature-secondary-text {
   color: var(--secondary-text-color);
@@ -269,13 +284,47 @@ ul {
   text-align: center;
 }
 .team-duty {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
-
+.team-sociallinks,
+.join-sociallinks {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 30px;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 100%;
+  height: 45px;
+}
+.team-sociallinks .link,
+.join-sociallinks .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+}
+.team-sociallinks .link:not(last-child),
+.join-sociallinks .link:not(last-child) {
+  margin-right: 10px;
+}
+.team-sociallinks .icon {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+.team-sociallinks .link:hover {
+  background-color: var(--accent-color);
+}
+.team-sociallinks .icon:hover {
+  fill: var(--primary-white-color);
+}
 /* -------CLIENTS---------*/
 .clients-title {
   padding-top: 94px;
@@ -294,19 +343,30 @@ ul {
 .clients-logo .item {
   width: 170px;
   height: 92px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px solid #afb1b8;
   border-radius: 4px;
 }
 .clients-logo .item:not(:last-child) {
   margin-right: 40px;
 }
-.clients-logo a {
-  display: block;
+.clients-logo .icon {
+  margin: 0 auto;
+  width: 106px;
+  height: 60px;
+  fill: #afb1b8;
+}
+.clients-logo .icon:hover {
+  fill: var(--accent-color);
 }
 /* -------FOOTER---------*/
 .footer {
   background-color: #2f303a;
+}
+.footer .container {
+  display: flex;
 }
 .footer .logo {
   display: inline-block;
@@ -328,7 +388,35 @@ ul {
 .address-tel {
   color: var(--secondary-text-color);
 }
+.join {
+  margin-left: 70px;
+}
+.join-title {
+  margin-top: 72px;
+  margin-bottom: 20px;
 
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+}
+.join-sociallinks {
+  padding: 0;
+}
+.join-sociallinks .link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.join-sociallinks .link:hover {
+  background-color: var(--accent-color);
+}
+.join-sociallinks .icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--primary-white-color);
+}
 /*-----------PORTFOLIO-----------------*/
 
 .portfolio-button {
